--- a/mie/doc/simul.bib
+++ b/mie/doc/simul.bib
@@ -3086,3 +3086,15 @@
   year = {2007},
   doi = {10.1063/1.2746329}
 }
+
+
+@article{Goethe2017,
+  author = {Martin Goethe and Ignacio Fita and J. Miguel Rubi},
+  title = {Testing the mutual information expansion of entropy with multivariate Gaussian distributions},
+  journal = {The Journal of Chemical Physics},
+  volume = {147},
+  number = {22},
+  pages = {224102},
+  year = {2017},
+  doi = {10.1063/1.4996847}
+}
